Updated new webpage

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -125,7 +125,7 @@
             alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Shovna Panda</h5>
-        <p class="text-uppercase blue-text mb-0"><strong>Business Associate</strong></p>
+        <p class="text-uppercase blue-text mb-0"><strong>Chief Information Officer</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
           <a class="p-2 fa-lg tw-ic" href="https://www.linkedin.com/in/shovna-panda-4277631b8" style="color: black; text-decoration: none;">
             <i class="fab fa-linkedin linkedin blue-text"> </i>
@@ -143,7 +143,7 @@
             alt="Sample avatar" style="height: 60%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Suman Patra</h5>
-        <p class="text-uppercase blue-text mb-0"><strong>Chief Designer</strong></p>
+        <p class="text-uppercase blue-text mb-0"><strong>Chief Creative Officer</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
         <ul class="list-unstyled mb-0">
             <a class="p-2 fa-lg tw-ic" href="https://www.linkedin.com/in/suman-patra-888a131b6/" style="color: black; text-decoration: none;">
@@ -256,10 +256,10 @@
         </div>
       </div>
       <div class="row">
-            <div class="col-lg-6 col-md-6 mb-lg-0 mt-2 mb-5">
+            <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="avatar mx-auto">
                 <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1603132545/Team%20Photo/IMG_20200325_175940_512_k8pm0g.jpg" class="rounded-circle z-depth-1 team"
-                alt="Sample avatar" style="height: 35%; width: 35%; box-shadow: 5px 5px 20px rgb(66 77 84)">
+                alt="Sample avatar" style="height: 80%; width: 68%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Sudhanshu Dubey</h5>
             <p class="text-uppercase blue-text mb-0"><strong>Video Editor</strong></p>
@@ -273,10 +273,44 @@
                   </a>
             </ul>
             </div>
-            <div class="col-lg-6 col-md-6 mb-lg-0 mb-5">
+            <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+            <div class="avatar mx-auto">
+                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1605764995/Team%20Photo/IMG_20201119_093522_zwngtk.jpg" class="rounded-circle z-depth-1 team"
+                alt="Sample avatar" style="height: 67%; width: 68%; box-shadow: 5px 5px 20px rgb(66 77 84)">
+            </div>
+            <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Pratyasha Sahu</h5>
+            <p class="text-uppercase blue-text mb-0"><strong>C Instructor</strong></p>
+            <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">SRM, Chennai</p>
+            <ul class="list-unstyled mb-0">
+                <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/pratyasha.sahu.568/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-facebook-f fb blue-text"> </i>
+                </a>
+                <a class="p-2 fa-lg ins-ic" href="https://www.instagram.com/pratyasha_sahu/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-instagram insta blue-text"> </i>
+                </a>
+                <a class="p-2 fa-lg tw-ic" href="https://www.linkedin.com/in/pratyasha-sahu-8a26ab194/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-linkedin linkedin tt blue-text"> </i>
+                </a>
+            </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+            <div class="avatar mx-auto">
+                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1605765689/Team%20Photo/IMG_20191001_232250_1_almwwp.jpg" class="rounded-circle z-depth-1 team"
+                alt="Sample avatar" style="height: 72%; width: 68%; box-shadow: 5px 5px 20px rgb(66 77 84)">
+            </div>
+            <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Yashika Barao</h5>
+            <p class="text-uppercase blue-text mb-0"><strong>Graphic Designer</strong></p>
+            <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">NIFT, Bhubaneswar</p>
+            <ul class="list-unstyled mb-0">
+                <a class="p-2 fa-lg ins-ic" href="https://www.instagram.com/in.an_iworry_tower/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-instagram insta blue-text"> </i>
+                </a>
+            </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="avatar mx-auto">
                 <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601984055/Team%20Photo/Shreyas_nmjwyt.jpg" class="rounded-circle z-depth-1 team"
-                alt="Sample avatar" style="height: 35%; width: 35%; box-shadow: 5px 5px 20px rgb(66 77 84)">
+                alt="Sample avatar" style="height: 68%; width: 68%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Shreyas PJ</h5>
             <p class="text-uppercase blue-text mb-0"><strong>ML/AI Volunteer</strong></p>
@@ -297,6 +331,48 @@
             </ul>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-md-6 mb-lg-0 mt-5 mb-5">
+            <div class="avatar mx-auto">
+                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1605983688/Team%20Photo/WhatsApp_Image_2020-11-21_at_18.30.23_euhzxr.jpg" class="rounded-circle z-depth-1 team"
+                alt="Sample avatar" style="height: 50%; width: 50%; box-shadow: 5px 5px 20px rgb(66 77 84)">
+            </div>
+            <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Anindya Ray</h5>
+            <p class="text-uppercase blue-text mb-0"><strong>Python Instructor</strong></p>
+            <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">VIT, Vellore</p>
+            <ul class="list-unstyled mb-0">
+                  <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/anindya.ray.796" style="color: black; text-decoration: none;">
+                    <i class="fab fa-facebook-f fb blue-text"> </i>
+                </a>
+                <a class="p-2 fa-lg tw-ic" href="https://www.linkedin.com/in/anindya-ray-2270611a2/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-linkedin linkedin tt blue-text"> </i>
+                </a>
+                  <a class="p-2 fa-lg ins-ic" href="https://www.instagram.com/_anindyaray_/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-instagram insta blue-text"> </i>
+                  </a>
+            </ul>
+            </div>
+            <div class="col-lg-6 col-md-6 mb-lg-0 mt-5 mb-5">
+            <div class="avatar mx-auto">
+                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1605991166/Team%20Photo/WhatsApp_Image_2020-11-22_at_01.08.30_nxcjge.jpg" class="rounded-circle z-depth-1 team"
+                alt="Sample avatar" style="height: 50%; width: 50%; box-shadow: 5px 5px 20px rgb(66 77 84)">
+            </div>
+            <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Sarthak Kumar Das</h5>
+            <p class="text-uppercase blue-text mb-0"><strong>Content Creator</strong></p>
+            <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT, Bhubaneswar</p>
+            <ul class="list-unstyled mb-0">
+                <a class="p-2 fa-lg ins-ic" href="https://www.instagram.com/kumar.sarthak.das/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-instagram insta blue-text"> </i>
+                </a>
+                <a class="p-2 fa-lg tw-ic" href="https://www.linkedin.com/in/sarthak-kumar-das-7775181b4/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-linkedin linkedin tt blue-text"> </i>
+                </a>
+            </ul>
+            </div>
+        </div>
+
+
   </section>
 </div>
 {% endblock %}
