--- a/main/templates/main/exam.html
+++ b/main/templates/main/exam.html
@@ -35,7 +35,7 @@
                 <div style="text-align: center;">
                   <p style="font-size: large;"><i>"Test You Knowledge and compare yourself with you. You are your own Competition"</i></p>
                 </div>
-                <p class="article-content">We believe there is no point of only learning new things unless you test your knowledge by giviing exams and testing yourself.</p>
+                <p class="article-content">We believe there is no point of only learning new things unless you test your knowledge by giving exams and testing yourself.</p>
                 <p class="article-content">Keeping this in mind, We have brought you <b>QUIZ EXAMS</b> to test your knowledge and skills. By giving these exams you can also know where you stand and how much clear your concepts are. <b>We have also provided you with online IDE to practice on your own. </b></p>
                 <div class="img-container mb-2" style="text-align: center;">
                   <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602314572/Resources/Word_Art_jy5fy5.jpg" alt="1001">
@@ -68,7 +68,7 @@
                       </ul>
                     </div>
               </div>
-              
+
               <div id="menu2" class="container tab-pane fade"><br>
                 <i><b class="text-danger" style="text-align: center;">** DONOT CHANGE THE LANGUAGE OF THE BELOW COMPILER. FOR PYTHON, JAVA etc. GO TO THE CORRESPONDING SECTION **</b></i><br><br>
                 <iframe width="100%" height="500" src="https://gcc.godbolt.org/e?hideEditorToolbars=true#g:!((g:!((g:!((h:codeEditor,i:(fontScale:14,j:1,lang:c%2B%2B,source:'//+Type+your+code+here,+or+load+an+example.%0A%23include%3Ciostream%3E%0Ausing+namespace+std%3B%0A%0Aint+main()%0A%7B++%0A++++cout%3C%3C%22Hello+World%22%3B%0A++++return+0%3B%0A%7D'),l:'5',n:'0',o:'C%2B%2B+source+%231',t:'0')),k:100,l:'4',m:49.77511244377811,n:'0',o:'',s:0,t:'0'),(g:!((h:executor,i:(argsPanelShown:'1',compilationPanelShown:'0',compiler:g102,compilerOutShown:'0',execArgs:'',execStdin:'',fontScale:14,j:1,lang:c%2B%2B,libs:!(),options:'',source:1,stdinPanelShown:'1'),l:'5',n:'0',o:'x86-64+gcc+10.2+Executor+(Editor+%231)+C%2B%2B',t:'0')),header:(),l:'4',m:50.22488755622189,n:'0',o:'',s:0,t:'0')),l:'3',n:'0',o:'',t:'0')),version:4"></iframe>
@@ -92,7 +92,7 @@
                       <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='27165573' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
                     </ul>
                   </div>
-              </div>  
+              </div>
               <div id="menu3" class="container tab-pane fade"><br>
                 <iframe src="https://trinket.io/embed/html/0ddc0fb049" width="100%" height="500" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
                 <div class="text-center">
@@ -118,13 +118,13 @@
                       <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26963559' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
                     </ul>
                   </div>
-                
+
               </div>
 
 
             </div>
           </div>
     </div>
-      
+
 
 {% endblock %}
