--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -7,13 +7,13 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602362422/Resources/Carousel1_a3d6ar.png" class="d-block w-100" alt="...">
+        <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1606025343/FIRST_LAPTOP_z77uaj.png" class="d-block w-100" alt="...">
       </div>
       <!--<div class="carousel-item">
         <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602360626/Resources/Carousel2_rqtvzy.png" class="d-block w-100" alt="...">
       </div>-->
-      <div class="carousel-item">
-        <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602589904/Resources/C_xzmbvs.png" class="d-block w-100" alt="...">
+      <div class="carousel-item laptop-c">
+        <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1606029024/SECOND_L_sr7zjh.png" class=" d-block w-100" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -31,6 +31,7 @@
   <h1 style="font-weight: 700; color: black">Presenting Before You Something Like Never Before</h1><br>
     <hr style="height:3px;border-width:1;color:black;background-color:black"><br>
     <h1 style="font-weight: 1000; font-family:sans-serif" class="awesome">THE FIRST EVER ODIA E-LEARNING PLATFORM FOR FREE</h1><br>
+    <h1 style="font-weight: 1000; font-family:sans-serif" class="awesome">THE FIRST ONE OF ITS KIND</h2><br>
     <hr style="height:3px;border-width:1;color:black;background-color:black"><br>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-6">
@@ -113,7 +114,7 @@
               <div class="rating">
                 &nbsp;&nbsp;<svg width="1.8em" height="1.8em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-              </svg> <b> {{number}} </b> 
+              </svg> <b> {{number}} </b>
               </div>
           </div>
           <div class="list-group">
@@ -165,7 +166,7 @@
             <div class="card__front">
               <div class="card card-01">
                 <div class="profile-box-01">
-                  <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982252/Team%20Photo/Sobhan_c4gbad.jpg" alt="Card image cap" style="height: 17rem;"> 
+                  <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982252/Team%20Photo/Sobhan_c4gbad.jpg" alt="Card image cap" style="height: 17rem;">
                 </div>
                 <div class="card-body text-center">
                   <span class="badge-box"><i class="fa fa-check"></i></span>
@@ -233,7 +234,7 @@
                 <div class="card-body text-center">
                   <h4 class="card-title">Pratik Mohanty</h4>
                   <p class="card-text article-content">Come and learn to create webpages from scratch and get into the magic of web development.</p>
-                  
+
                 </div>
               </div>
             </div>
@@ -243,7 +244,7 @@
       <br>
         <div class="container" style="text-align: center; margin-top:12%">
           <a href="{% url 'about' %}"><div class="btn btn-primary">View All Members</div></a>
-        </div>  
+        </div>
     </div>
 </div>
 
@@ -274,7 +275,7 @@
           </div>
       <div class="container mt-4" style="text-align: center;">
         <a href="{% url 'about' %}"><div class="btn btn-primary">View All Members</div></a>
-      </div>  
+      </div>
     </div>
 </div>
 
@@ -351,7 +352,7 @@
                       <p>
                         <i class="fas fa-quote-left"></i>Never Give Up! Be consistent and keep practicing. Consistency in the right path is the key to success. We are there to help in making you consistent in your career path.<i class="fas fa-quote-right"></i></p>
                       <h4 class="font-weight-bold">Shovna Panda</h4>
-                      <h6 class="font-weight-bold my-3">BUSINESS ASSOCIATE</h6>
+                      <h6 class="font-weight-bold my-3">CHIEF INFORMATION OFFICER</h6>
                       </div>
                    </div>
                   <div class="carousel-item">
@@ -361,12 +362,12 @@
                         alt="Third sample avatar image" style="height: 23%; width: 23%">
                     </div>
                     <p>
-                      <i class="fas fa-quote-left"></i>Education is power. In this fast moving world, Language should no longer be a barrier. All you need is passion and willingness to learn. 
+                      <i class="fas fa-quote-left"></i>Education is power. In this fast moving world, Language should no longer be a barrier. All you need is passion and willingness to learn.
                       Your zeal combined with our offerings provide the most powerful and first hand experience to conquer the odds.<i class="fas fa-quote-right"></i></p>
                     <h4 class="font-weight-bold">Suman Patra</h4>
-                    <h6 class="font-weight-bold my-3">CHIEF DESIGNER</h6>
+                    <h6 class="font-weight-bold my-3">CHIEF CREATIVE OFFICER</h6>
                     </div>
-                  </div> 
+                  </div>
                     </div>
                     <a class="carousel-control-prev left carousel-control testimonial-btn" href="#carousel-example-1" role="button"
                     data-slide="prev">
@@ -394,7 +395,7 @@
                     <h3>Python Tutorials</h3>
                     <p style=" font-size:large">We have brought you Tutorials on the most popular programming language of the world which is widely used i.e. <b>PYTHON</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
                     <div class="container mt-4" style="text-align: center;">
-                        <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a> 
+                        <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 " style="text-align: center;">
@@ -440,7 +441,7 @@
                     </div>
                     <p style=" font-size:large">We have brought you Tutorials on the most popular programming language of the world which is widely used i.e. <b>PYTHON</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
                     <div class="container mt-4" style="text-align: center;">
-                      <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a> 
+                      <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a>
                   </div>
                 </div>
             </div>
@@ -452,7 +453,7 @@
                     </div>
                     <p style=" font-size:large">We have brought to you Weekly as well as Monthly Quizzes to brush up your knowledge and skills. In addition to that we have also provided you Online IDEs so that you can practice on your own. You can find everything here at the cost of just 1 Click and at no extra cost.</p>
                     <div class="container mt-4" style="text-align: center;">
-                      <a href="{% url 'exam' %}"><div class="btn btn-primary">Get Started</div></a> 
+                      <a href="{% url 'exam' %}"><div class="btn btn-primary">Get Started</div></a>
                   </div>
                 </div>
             </div>
